# GUI_Calculator

./: .gitignore  CMakeLists.txt  COMPILATION_INSTRUCTIONS.md  GITHUB_PUSH_INSTRUCTIONS.md  PERFORMANCE_METRICS.md  README.md  calculator_model.py  calculator_view.py  calculator_viewmodel.py  focused_benchmark.cpp  main.py  optimized_calculator.cpp  optimized_calculator.hpp  test_calculator.py
